# tdesktop

./: .clang-format  .clang-tidy  .cursorignore  .devcontainer.json  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LEGAL  LICENSE  MSVC.md  QTCREATOR.md  README.md  Telegram.sln  Whatsapp  XCODE.md  XCODEold.md  _qt_5_4_0_patch.diff  appveyor.yml  build-msvc2013.txt  changelog.txt  current  current2  date  document  features.md  gsdgsd  kacangbet  lint.bash  ok.html  prepare_version.py  ptelegram_changelog.md  snapcraft.yaml  test.txt  update.bat  update.sh  update_submodules.py  updatespublickey
Telegram/: Build.bat  Build.sh  BuildWin.bat  CMakeLists.txt  Deploy.sh  DeployLinux.sh  DeployLinux32.sh  DeployMac.sh  DeployMacWin.sh  DeployWin.sh  Emoji.plist  FixMake.sh  FixMake32.sh  Lang.plist  MetaEmoji.pro  MetaEmoji.vcxproj  MetaEmoji.vcxproj.filters  MetaLang.pro  MetaLang.vcxproj  MetaLang.vcxproj.filters  MetaStyle.pro  MetaStyle.vcxproj  MetaStyle.vcxproj.filters  Packer.plist  Packer.pro  Packer.vcxproj  Packer.vcxproj.filters  Prepare.bat  Prepare.sh  Prepare.vcxproj  Prepare.vcxproj.filters  PrepareLinux.sh  PrepareLinux32.sh  PrepareMac.sh  PrepareUbuntu.sh  PrepareWin.bat  Preprocess copy-Info.plist  Setup.iss  SignMac.sh  SignWin.bat  (+34 more)
Telegram/MetaEmoji.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
Telegram/MetaLang.xcodeproj/: project.pbxproj  qt_preprocess.mak
Telegram/MetaStyle.xcodeproj/: project.pbxproj  qt_preprocess.mak
Telegram/Packer.xcodeproj/: project.pbxproj  qt_preprocess.mak
Telegram/Patches/: breakpad.diff  build_ffmpeg_win.sh  crashpad.diff  ffmpeg.diff  gyp.diff  mini_chromium.diff  openal.diff  qtbase_5_3_2.diff  qtbase_5_5_1.diff  qtbase_5_6_0.diff  qtbase_5_6_2.diff
Telegram/Patches/macold/: crashpad.diff  mini_chromium.diff  qtbase_5_3_2.diff  qtimageformats_5_3_2.diff
Telegram/Resources/: LangList  all_files.style  basic.style  basic_types.style  colors.palette  day-blue.tdesktop-theme  day-custom-base.tdesktop-theme  default.tdesktop-theme  default_extera-settings-custom.json  default_rabbit-settings-custom.json  default_shortcuts-custom.json  emoji_autocomplete.json  fc-custom.conf  lang-es.txt  lang-pt_br.txt  lang.strings  lang.txt  lang_it.txt  night-custom-base.tdesktop-theme  night-green.tdesktop-theme  night.tdesktop-theme  numbers.txt  sample.tdesktop-theme  scheme.tl  style.txt  style_classes.txt  telegram.qrc  telegram_emojis.qrc  telegram_linux.qrc  telegram_mac.qrc  telegram_wnd.qrc
Telegram/Resources/animations/: blocked_peers_empty.tgs  change_number.tgs  chat_link.tgs  cloud_filters.tgs  collectible_phone.tgs  collectible_username.tgs  diamond.tgs  discussion.tgs  filters.tgs  greeting.tgs  hello_status.tgs  hours.tgs  local_passcode_enter.tgs  location.tgs  media_forbidden.tgs  no_chats.tgs  noresults.tgs  palette.tgs  phone.tgs  robot.tgs  search.tgs  sleep.tgs  stats.tgs  (+8 more)
Telegram/SourceFiles/: Telegram.plist  apiwrap.cpp  apiwrap.h  app.cpp  app.h  application.cpp  application.h  audio.cpp  audio.h  auth_session.cpp  auth_session.h  autoupdater.cpp  autoupdater.h  basic_types.cpp  basic_types.h  config.h  countries.h  dialogswidget.cpp  dialogswidget.h  dropdown.cpp  dropdown.h  facades.cpp  facades.h  fileuploader.cpp  fileuploader.h  history.cpp  history.h  historywidget.cpp  historywidget.h  lang.cpp  lang.h  langloaderplain.cpp  langloaderplain.h  layerwidget.cpp  layerwidget.h  layout.cpp  layout.h  localimageloader.cpp  localimageloader.h  localstorage.cpp  (+65 more)
Telegram/Telegram/: Breakpad.entitlements  Telegram Desktop.entitlements  Telegram Lite.entitlements  Telegram.entitlements  Telegreat.entitlements
Telegram/Telegram.xcodeproj/: project.pbxproj  qt_preprocess.mak
Telegram/Updater.xcodeproj/: project.pbxproj
Telegram/cmake/: check_atomic.cmake  generate_appdata_changelog.cmake  generate_lang.cmake  generate_midl.cmake  generate_numbers.cmake  generate_scheme.cmake  lib_export.cmake  lib_ffmpeg.cmake  lib_lz4.cmake  lib_mtproto.cmake  lib_prisma.cmake  lib_scheme.cmake  lib_stripe.cmake  lib_tgcalls.cmake  lib_tgvoip.cmake  td_export.cmake  td_iv.cmake  td_lang.cmake  td_mtproto.cmake  td_scheme.cmake  td_tde2e.cmake  td_ui.cmake  telegram_options.cmake  tests.cmake
Telegram/fa-IR.lproj/: Localizable.strings
Telegram/fcitx-qt5/: fcitx.json  fcitx.pro  fcitxqtconfiguifactory.cpp  fcitxqtconfiguifactory.h  fcitxqtconfiguifactory_p.h  fcitxqtconfiguiplugin.cpp  fcitxqtconfiguiplugin.h  fcitxqtconfiguiwidget.cpp  fcitxqtconfiguiwidget.h  fcitxqtconnection.cpp  fcitxqtinputcontextproxy.cpp  fcitxqtinputcontextproxy.h  fcitxqtinputmethoditem.cpp  fcitxqtinputmethodproxy.cpp  fcitxqtkeyboardproxy.cpp  fcitxqtkeyboardproxy.h  fcitxqtkeysequencewidget.cpp  fcitxqtkeysequencewidget.h  fcitxqtkeysequencewidget_p.h  fcitxqtwidgetsaddons_export.h  keyuni.cpp  keyuni.h  main.h  platforminputcontexts.pro.patch.diff  qfcitxplatforminputcontext.cpp  qfcitxplatforminputcontext.h  qtkeytrans.cpp  qtkeytrans.h  qtkeytransdata.h
Telegram/gyp/: PrecompiledHeader.cmake  Telegram.gyp  Telegreat.gyp  codegen.gyp  codegen_rules.gypi  codegen_rules_ui.gypi  codegen_styles_rule.gypi  common.gypi  common_executable.gypi  create_env.py  crl.gyp  generate.py  lib_base.gyp  lib_export.gyp  lib_ffmpeg.gyp  lib_lottie.gyp  lib_lz4.gyp  lib_mtproto.gyp  lib_rlottie.gyp  lib_scheme.gyp  lib_storage.gyp  lib_ui.gyp  linux_glibc_wraps.gyp  list_sources.py  lottie_helper.bat  lottie_helper.py  official.py  openssl.gypi  pch.gypi  print_version.sh  qt.gypi  qt_moc.gypi  qt_rcc.gypi  refresh.bat  refresh.sh  settings_linux.gypi  settings_mac.gypi  settings_win.gypi  telegram_linux.gypi  telegram_mac.gypi  (+5 more)
Telegram/local/: CmakeLists.txt
cmake/: CMakeLists.txt  constants.cmake  force_include.cmake  functions.cmake  generate_target.cmake  init_target.cmake  nice_target_sources.cmake  options.cmake  options_win.cmake  paths.cmake
local/: CMakeLists.txt
local/coder/: coder.cpp  coder.h
local/key_manager/: key_manager.cpp  key_manager.h
local/main/: local.cpp  local.h
(+4072 files in other folders)
